data/derived/comb/progs/unify/prog2407.ml.out
Characters 86-87:
  | _ -> (0, 0) in
             ^
Error: This expression has type int but an expression was expected of type
         int list
